[package]
name = "amax_logger_hook"
version = "0.1.1"
edition = "2021"

[lib]
name = "amax_logger_hook"
crate-type = ["cdylib"]

[dependencies]
blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core", version = "0.1.2" }
log = "0.4.20"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
minhook-sys = "0.1.1"
simplelog = "0.12.1"
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
